# trading-bot

./: LICENSE  README.md  bot.py  pyproject.toml
.devcontainer/: devcontainer.json
configs/: bot_config.yaml  strategies_config.yaml
indecators/: __init__.py
strategies/: __init__.py  ma_in_sequence.py  martingale.py
tests/: test_bot.py  test_strategies.py
tests/bot_unit_tests/: test_bot.py
tests/strategies_tests/: test_ma_in_sequence.py  test_trailing_stop_orders.py
trading_bot/: __init__.py  bot.py
trading_bot/configs/: sg1_strategies_config.yaml  strategies_config.yaml
trading_bot/src/config/: base_class.py  bot_config.py
trading_bot/src/strategies/: __init__.py  base_class.py  ma_in_sequence.py  martingale.py  trailing_stop_orders.py
trading_bot/src/utilities/: __init__.py  config_utilities.py
trading_bot/strategies/: __init__.py  base_class.py  ma_in_sequence.py  martingale.py  trailing_stop_orders.py
