[tool.poetry]
name = "trading-bot"
version = "0.1.0"
description = ""
authors = ["michael tse <tse.man.kit.michael@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pydantic = "^2.7.1"
apscheduler = "^3.10.4"
pyyaml = "^6.0.2"
loguru = "^0.7.2"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"
anyio = "^4.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
